<resources>
    <!-- Resources for menus -->
    <!--- For the drawer -->
    <string name="user_name">User name</string>

    <string name="app_name">MyCozyLib</string>
    <string name="nav_library">My library</string>
    <string name="nav_wish_list">Wish List</string>
    <string name="nav_research">Search for a book</string>
    <string name="nav_title_parameter">Parameters</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_disconnection">Disconnection</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--- For the bottom navigation -->
    <string name="nav_list_view">List View</string>
    <string name="nav_grid_view">Grid View</string>
    <string name="nav_image_view">Image View</string>

    <!--- For navigation between pages -->
    <string name="nav_back">Go back</string>

    <!-- Resources for authentication -->
    <string name="welcome_message">Welcome to </string>
    <string name="sign_in_message">Sign In :</string>
    <string name="log_in_message">Log In :</string>
    <string name="choose_sign_in_method_message">Please select a sign in method :</string>

    <string name="field_mail">Email address</string>
    <string name="field_pseudo">Pseudo</string>
    <string name="field_password">Password</string>
    <string name="field_confirm_password">Confirm Password</string>

    <string name="firebase_facebook_application_id" translatable="false">MyCozyLib</string>
    <string name="firebase_facebook_login_protocol_scheme" translatable="false">fbMyCozyLib</string>

    <!--- Sign in -->
    <string name="error_sign_in_canceled">Sign in error : canceled</string>
    <string name="error_sign_in">Please fill this field</string>
    <string name="error_sign_in_mail_already_exist">This Email address already exists, please enter another one</string>
    <string name="error_sign_in_mail_wrong_format">Please enter a valid Email address</string>
    <string name="error_sign_in_password_too_weak">Please fill this field</string>
    <string name="error_sign_in_confirm_password_do_not_match">The confirmed password doesn\'t match</string>

    <string name="sign_in_success">User successfully sign in</string>

    <!--- Log in -->
    <string name="submit">Submit</string>
    <string name="text_no_account">You don\'t have an account ? </string>
    <string name="link_no_account">Click here to register !</string>
    <string name="text_already_an_account">You already have an account ? </string>
    <string name="link_already_an_account">Click here connect !</string>

    <string name="error_log_in">Please fill this field</string>
    <string name="error_log_in_mail_do_not_exist">This Email address already doesn\'t exist, if you are a new user, please sign in before</string>
    <string name="error_log_in_password_do_not_match">Password doesn\'t match</string>


    <!-- Resources for specified activities and fragments -->
    <!--- Research -->
    <string name="text_research">Search...</string>

    <!--- Book information -->
    <string name="text_book_title">Title</string>
    <string name="text_book_subtitle">Subtitle</string>
    <string name="text_book_author">Author/s</string>
    <string name="text_book_editor">Editor</string>
    <string name="text_book_page_count">Number of pages</string>
    <string name="text_book_published_date">Published date</string>
    <string name="text_book_synopsis">Synopsis</string>
    <string name="book_cover">Book cover</string>

    <!--- Database modifications -->
    <string name="book_saved">Book saved</string>
    <string name="book_empty_not_saved">Book not saved because it\'s empty</string>
    <string name="error_book_title_empty">Please fill the book title</string>
    <string name="error_unexpected">An unexpected error happened. Please contact our developers</string>

    <!--- New book -->
    <string name="new_book">New book</string>
    <string name="text_library_add">Add this book to my Library</string>

    <!--- Wish list -->
    <string name="text_wish_list_add">Add this book to my Wish List</string>

</resources>