<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="top|center"
    android:padding="@dimen/big_margin" >

    <ImageButton
        android:id="@+id/btn_add_new_book_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_24"
        android:layout_gravity="start"
        android:contentDescription="@string/nav_back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_book"
        style="@style/TextAppearance.AppCompat.Title"/>

    <EditText
        android:id="@+id/new_book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_book_title"
        android:inputType="textAutoComplete"/>

    <EditText
        android:id="@+id/new_book_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_book_subtitle"
        android:inputType="textAutoComplete"/>
    <EditText
        android:id="@+id/new_book_authors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_book_author"
        android:inputType="textAutoComplete" />
    <EditText
        android:id="@+id/new_book_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_book_editor"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/new_book_published_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_book_published_date"
        android:inputType="date"/>

    <EditText
        android:id="@+id/new_book_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_book_synopsis"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/new_book_number_of_pages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_book_page_count"
        android:inputType="number" />

    <Button
        android:id="@+id/new_book_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_library_add"
        android:layout_margin="@dimen/big_margin"/>

</LinearLayout>