<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library_24"
            android:title="@string/nav_library" />
        <item
            android:id="@+id/nav_wish_list"
            android:icon="@drawable/ic_wish_24"
            android:title="@string/nav_wish_list" />
        <item
            android:id="@+id/nav_research"
            android:icon="@drawable/ic_search_24"
            android:title="@string/nav_research" />
    </group>


    <item android:title="@string/nav_title_parameter">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_24"
                    android:title="@string/nav_settings" />
                <item
                    android:id="@+id/nav_disconnection"
                    android:icon="@drawable/ic_waving_hand_24"
                    android:title="@string/nav_disconnection" />
            </group>
        </menu>
    </item>
</menu>