<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left">

    <ImageButton
        android:id="@+id/btn_book_details_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/img_book_details_cover"
        android:layout_width="150sp"
        android:layout_height="150sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_book_details_back"/>

    <TextView
        android:id="@+id/text_book_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_book_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_book_details_cover"
        app:layout_constraintStart_toEndOf="@id/img_book_details_cover"/>

    <TextView
        android:id="@+id/text_book_details_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_book_subtitle"
        app:layout_constraintLeft_toLeftOf="@+id/text_book_details_title"
        app:layout_constraintTop_toBottomOf="@+id/text_book_details_title" />

    <TextView
        android:id="@+id/text_book_details_editor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_book_editor"
        app:layout_constraintStart_toEndOf="@id/img_book_details_cover"
        app:layout_constraintTop_toBottomOf="@+id/text_book_details_subtitle"/>

    <TextView
        android:id="@+id/text_book_details_published_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_book_published_date"
        app:layout_constraintStart_toEndOf="@id/img_book_details_cover"
        app:layout_constraintTop_toBottomOf="@+id/text_book_details_editor"/>

    <TextView
        android:id="@+id/text_book_details_page_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_book_page_count"
        app:layout_constraintStart_toEndOf="@id/img_book_details_cover"
        app:layout_constraintTop_toBottomOf="@+id/text_book_details_published_date"/>

    <TextView
        android:id="@+id/text_book_details_synopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_book_synopsis"
        app:layout_constraintTop_toBottomOf="@id/img_book_details_cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_book_details_synopsis"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/text_library_add"/>

</androidx.constraintlayout.widget.ConstraintLayout>