<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_book_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_book_title"/>

        <TextView
            android:id="@+id/text_book_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_book_editor"/>

        <TextView
            android:id="@+id/text_book_page_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_book_page_count"/>

        <TextView
            android:id="@+id/text_published_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_published_date"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>